--- a/bower.json
+++ b/bower.json
@@ -18,23 +18,23 @@
     "url": "git://github.com/f-o-a-m/purescript-web3-generator.git"
   },
   "dependencies": {
-    "purescript-argonaut": "^3.1.0",
-    "purescript-argonaut-core": "^3.1.0",
-    "purescript-argonaut-generic-codecs": "^6.0.4",
-    "purescript-prelude": "^3.1.0",
-    "purescript-errors": "^3.0.0",
-    "purescript-yargs": "^3.1.0",
-    "purescript-ansi": "^4.0.0",
-    "purescript-node-fs-aff": "^5.0.0",
-    "purescript-console": "^3.0.0",
-    "purescript-string-parsers": "^3.0.1",
-    "purescript-web3": "^0.24.0",
-    "purescript-mkdirp": "^0.3.0",
-    "purescript-fixed-points": "^4.0.0",
-    "purescript-record-extra": "^0.3.0"
+    "purescript-argonaut": "kejace/purescript-argonaut#compiler/0.12",
+    "purescript-argonaut-core": "^4.0.0",
+    "purescript-argonaut-generic-codecs": "kejace/purescript-argonaut-generic-codecs#compiler/0.12",
+    "purescript-prelude": "^4.0.0",
+    "purescript-errors": "kejace/purescript-errors#compiler/0.12",
+    "purescript-yargs": "kejace/purescript-yargs#compiler/0.12",
+    "purescript-ansi": "^5.0.0",
+    "purescript-node-fs-aff": "^6.0.0",
+    "purescript-console": "^4.1.0",
+    "purescript-string-parsers": "^4.0.0",
+    "purescript-web3": "f-o-a-m/purescript-web3#purs-v0.12",
+    "purescript-mkdirp": "kejace/purescript-mkdirp#compiler/0.12",
+    "purescript-fixed-points": "^5.0.0",
+    "purescript-record-extra": "^0.4.0"
   },
   "devDependencies": {
-    "purescript-spec": "^2.0.0",
-    "purescript-psci-support": "^3.0.0"
+    "purescript-spec": "^3.0.0",
+    "purescript-psci-support": "^4.0.0"
   }
 }
